fixed some google maps problems

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyABajkttb898xIQBfmwcfXjw89SIRbP83o" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".ui.order.OrderActivity"
