--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id("com.google.dagger.hilt.android") version "2.44" apply false
     id "com.google.gms.google-services" version "4.3.15" apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
