--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ plugins {
 android {
     namespace 'com.example.mealmoverskotlin'
     compileSdk 33
+
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
     buildFeatures{
         dataBinding true
         viewBinding true
